--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,9 @@ security:
             logout:
                 path: app_logout
                 target: app_login
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 2592000 # 30 days in seconds
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
